@@ -193,7 +193,7 @@ the WRONG same-named copy. Eight fixes landed on
 | `ApplicationContextAotGeneratorTests` | ABEND (CGLIB load) | **2026-07-16 re-triage: LOADERR found=0** — NEW GC heap-corruption bug, see below (regresses the earlier "discovers+runs 40 methods" note, which was never characterized) |
 | `BeanDefinitionMethodGeneratorTests` | FAIL 34/3 | **OK 34/34** |
 | `ConfigurationClassPostProcessorAotContributionTests` | FAIL 20/8 | **OK-ish 20/15/5** (5 residual = host ClassFile gap, see below) |
-| `PersistenceAnnotationBeanPostProcessorAotContributionTests` | FAIL 8/0 (NCDFE) | FAIL 8/2/6 (Mockito attach residuals) |
+| `PersistenceAnnotationBeanPostProcessorAotContributionTests` | FAIL 8/0 (NCDFE) | **2026-07-16 re-triage: FAIL 8/2/6** (was briefly hidden behind an unrelated GC crash, see below — now the SAME shape as before, 1 pre-existing cold-attach + 5 narrowed ByteBuddy-generics residual) |
 | `TestContextAotGeneratorIntegrationTests` | FAIL 4/0 @393 s | **2026-07-16 re-triage: FAIL 4/0 @8.3 s** (was a genuine ~393 s slowdown, now fast; 4 distinct root causes, see below) |
 | `BeanRegistrationsAotContributionTests` | TIMEOUT | TIMEOUT (throughput, see below) |
 
@@ -249,11 +249,141 @@ the WRONG same-named copy. Eight fixes landed on
     unrelated host I/O contention (confirmed via A/B comparison that the
     slowness reproduces identically pre-fix) — worth a spot-check when the
     host is less loaded.
-*   `PersistenceAnnotationBeanPostProcessorAotContributionTests` — 8/2/6.
-    Post-fix the forked Mockito path advanced: now (a) fork attach via
-    `PremainAttachAccess` -> "Byte Buddy agent is not initialized", and (b) a
-    NEW ByteBuddy generics failure past the dispatcher: `IllegalArgumentException:
-    Cannot resolve T from class ...EntityManagerFactory$MockitoMock$...`.
+*   `PersistenceAnnotationBeanPostProcessorAotContributionTests` — **2026-07-16
+    dedicated re-triage.** Rebuilt fresh off dev tip `6c517cd9` (already
+    includes the same-day ByteBuddy repeat-redefine fix `c812b622`/`a2515075`)
+    in an isolated worktree/binary (`/data/data/wt-persistannobpp-20260716-141911`,
+    Azure host), reusing the official `apps/spring-suite-runner` classpath/`KRun`
+    harness unmodified.
+
+    **Step 1 finding: a NEW, unrelated GC crash was hiding the real residual.**
+    6/6 clean repro attempts against the `6c517cd9` binary hit a hard failure
+    *before* the class ever reached Mockito: `LOADERR`,
+    `ClassCastException: java.lang.Object cannot be cast to
+    org.junit.platform.engine.TestExecutionResult$Status`, preceded by a burst
+    of `cratonvm::gc::guard` "out-of-bounds field read/write dropped"
+    all-zero-header warnings and `Stale pointer detected in invokevirtual
+    receiver ... falling back to CP class com/sun/tools/javac/...` during
+    `TestCompiler`'s real in-process `javac` compile step (the FIRST of the
+    six `testCompile()`-calling test methods; `@CompileWithForkedClassLoader`
+    forks a brand-new `ClassLoader` and does a real javac compile PER test
+    method, an unusually allocation/GC-heavy path run 6×). With
+    `CRATONVM_DBG_STALE_OBJREF=1` this became a clean, reproducible hard panic
+    pinpointing `native_hashmap_get_exact`/`map_keys_equal`/`unbox_wrapper`,
+    reached from `com/sun/tools/javac/util/StringNameTable.fromString`. This
+    is the SAME long-tail "Family-1 stale-ObjectRef" bug class tracked in
+    `docs/internal/wildfly-parallel-boot-stale-objectref-residual.md`
+    (specifically matching that doc's still-open "Follow-up session 6" finding
+    #2 — a freshly-pinned `ObjectRef` stale on first dereference with no
+    obvious missing pin) — corroborated by an independent, concurrent
+    2026-07-16 re-triage of the sibling class `ApplicationContextAotGeneratorTests`
+    (see below) hitting the *identical* symptom shape via the same TestCompiler
+    path. **Not fixed by this session** — instead, an unrelated concurrent
+    session's dev commit `fb15be63` ("fix(gc): GAP_FILLER_CLASS_ID not
+    special-cased in new young-GC exact-walk loops", landed 2026-07-16 while
+    this investigation was in progress) turned out to be the actual fix: its
+    description ("misparsing the TLAB gap-filler sentinel broke the young-GC
+    exact object-start walk early, leaving everything allocated afterward
+    outside the exact set — `mark_young` silently drops those live objects and
+    the non-moving sweep reclaims them as garbage, i.e. mass stale-pointer/
+    all-zero-header corruption") matches this class's symptom precisely.
+    Rebuilt at dev tip `fb15be63` and reran: **0/3 repro attempts hit the GC
+    crash** (previously 6/6); the class now completes in ~150 s (previously
+    hung ~150 s before crashing, or crashed in seconds under
+    `CRATONVM_DBG_STALE_OBJREF`) and returns to the documented **8/2/6**
+    baseline shape. Not this session's fix; attributing correctly rather than
+    claiming credit.
+
+    **Step 2: with the GC crash out of the way, the residual is (a) 1
+    pre-existing cold-attach failure + (b) 5 ByteBuddy generics-resolution
+    failures — exactly the previously-documented split, confirmed by exact
+    stack trace this time.** (a) `processAheadOfTimeWhenCustomPersistenceUnitOnPublicSetter`
+    (whichever forked test executes first) fails with
+    `IllegalStateException: Could not initialize plugin: MockMaker` bottoming
+    out at `org.mockito.internal.PremainAttachAccess.getInstrumentation` ->
+    `ByteBuddyAgent.install` -> `IllegalStateException: The Byte Buddy agent is
+    not initialized or unavailable`. This is the SAME cold-self-attach quirk
+    already characterized via the standalone `BBProbe4.java` repro (fork #1
+    fails cold, forks #2+ succeed) — confirmed by design here too: because
+    `CompileWithForkedClassLoaderExtension.runTestWithModifiedClassPath`
+    creates a **brand-new `ClassLoader` per test method** (not once per class)
+    whose parent skips the original test loader entirely, every one of the 6
+    mock-using tests re-resolves `org.mockito.internal.PremainAttachAccess`
+    fresh — yet only the FIRST one to actually reach `Mockito.<clinit>` hits
+    the cold-attach failure; the other 5 succeed the attach step. This means
+    the "warm-up" that makes forks 2+ succeed in `BBProbe4` is **VM-process-level
+    state** (the underlying native self-attach mechanism's own one-time lazy
+    setup), not anything cached at the Java `PremainAttachAccess`/`ClassLoader`
+    level — confirming this is exactly the same pre-existing, unrelated,
+    already-characterized quirk, not something specific to this class's fork
+    mechanism. Regression-checked clean against `BBProbe4` directly (fork 1
+    cold-attach fails, forks 2-4 OK — unchanged).
+
+    (b) The other 5 tests fail with `MockitoException: Mockito cannot mock
+    this class: interface jakarta.persistence.EntityManagerFactory` /
+    `Underlying exception: IllegalArgumentException: Cannot resolve T from
+    class ...EntityManagerFactory$MockitoMock$...`, via
+    `net.bytebuddy.description.TypeVariableSource$AbstractBase.findExpectedVariable`
+    called from `Transformer$ForMethod$TransformedMethod$AttachmentVisitor.
+    onTypeVariable` during `MethodRegistry.compile`'s bridge-type resolution.
+    `EntityManagerFactory.<T> T unwrap(Class<T>)` is the trigger: a
+    METHOD-scoped (not class-scoped) type parameter.
+
+    **Root-caused (partially) and one real, independently-valuable bug fixed
+    along the way, but the ByteBuddy crash itself is NOT resolved.** Found via
+    a standalone reflection probe that `Method.getTypeParameters()`
+    (`native_method_get_type_parameters`, `native-builtins/src/lang_class.rs`)
+    built a brand-new synthetic `TypeVariable[]` on every call with no
+    memoization, unlike real JDK's `Executable.getTypeParameters()` (cached
+    per-Method `genericInfo`) — so `unwrap.getGenericReturnType()`'s "T" and
+    `unwrap.getTypeParameters()[0]`'s "T" were two DIFFERENT objects
+    (`==` false) instead of identity-equal as on HotSpot, which is exactly the
+    kind of break `generics.rs`'s existing identity-preserving
+    `resolve_declared_type_variable` machinery (added for an earlier, related
+    "Cannot resolve T" fix, see the ByteBuddy repeat-redefine entry below) was
+    designed to prevent. **Fixed** (dev commit `4cb070e5`,
+    `fix(reflect): Method/Constructor.getTypeParameters() now
+    identity-stable across calls`): caches the built array keyed by (VM
+    instance, declaring class, method name+descriptor), kept alive/remapped
+    across moving GCs via the existing `register_var_handle_root`/
+    `read_var_handle_root` permanent-native-root mechanism (built for
+    VarHandles, generic over any `ObjectRef`). Verified via the standalone
+    probe (identity mismatch before, `==` true after);
+    `cargo check -p cratonvm-native-builtins` clean pre- and post- the
+    `origin/dev` merge; `cargo test -p cratonvm-native-builtins --lib`
+    2999/0/6-ignored (matches baseline); `BBProbe4` regression-checked clean.
+
+    **However, re-running the full class after this fix showed the "Cannot
+    resolve T" failures UNCHANGED (still 5/5)** — this fix, while real and
+    correct, is not what ByteBuddy actually consults on this path. Traced one
+    level deeper via the real ByteBuddy 1.18.8 bytecode
+    (`Transformer$ForMethod$TransformedMethod$AttachmentVisitor.onTypeVariable`):
+    it first checks `TransformedMethod.getTypeVariables()` (the OVERRIDING
+    method as ByteBuddy is building it for the mock subclass) for a
+    same-named candidate, and only falls back to asking the **declaring
+    TYPE** (`findExpectedVariable`, which by design only ever looks at a
+    type's own declared params + its OUTER-class chain, never a method's) when
+    that list is empty. On CratonVM this list comes back empty for `unwrap`,
+    forcing the (structurally-guaranteed-to-fail-for-a-method-scoped-variable)
+    type-level fallback; on real HotSpot it evidently does not. Confirmed via
+    two more standalone probes that this is NOT a gap in CratonVM's own
+    reflective Method API: both `EntityManagerFactory.class.getDeclaredMethods()`
+    and `.getMethods()` correctly report `unwrap`'s own `<T>` (length 1,
+    `getGenericReturnType()` identity-equal to it, post-fix) — so the gap is
+    somewhere in how CratonVM's ByteBuddy-facing class/method model feeds
+    `MethodRegistry`'s token-copying machinery when it builds the new
+    override's OWN generic `Signature`, not in `java.lang.reflect` itself.
+    **OPEN — not fixed.** Next step for whoever picks this up: instrument (or
+    step through with `net.bytebuddy.dump`) exactly what
+    `TypeDescription.ForLoadedType(EntityManagerFactory).getDeclaredMethods()`
+    reports for `unwrap`'s `MethodDescription.getTypeVariables()` specifically
+    in the context ByteBuddy's `MethodRegistry.Default.Prepared.Entry.compile`
+    uses it (as opposed to a bare reflective probe, which was clean) — the
+    difference is most likely in how the *token* used to build the mock's own
+    override method (`MethodDescription.InDefinedShape.asTypeToken`/
+    `TypeDescription.Generic.Visitor.Substitutor`) round-trips a method-scoped
+    (not class-scoped) type variable, a narrower and more specific target than
+    this doc's original "(b)" description.
 *   ~~ByteBuddy repeat-redefine `NoSuchMethodError` family~~ **FIXED
     (2026-07-16, commit `c812b622`, merged to dev as `a2515075`).**
     Standalone repro (`BBProbe4.java`,
@@ -535,29 +665,85 @@ the WRONG same-named copy. Eight fixes landed on
        get a fresh stream) — but this is not confirmed; needs tracing which
        exact `Resource`/stream object SnakeYAML actually receives. Newly
        observed; not fixed.
-    4. `endToEndTests` — `ClassCastException:
+    4. ~~`endToEndTests` — `ClassCastException:
        org.springframework.test.context.hint.StandardTestRuntimeHints cannot be
-       cast to org.springframework.test.context.aot.TestRuntimeHintsRegistrar`,
-       thrown from the checkcast JIT/interp inserts inside
-       `TestContextAotGenerator.processAheadOfTime`'s
-       `this.testRuntimeHintsRegistrars.forEach(registrar -> …)` lambda. Same
-       *family* as this doc's whole loader-identity fix wave (a same-named class
-       loaded/resolved through two different loaders fails an
-       `instanceof`/checkcast), but a **NEW site**: `TestRuntimeHintsRegistrar`
-       instances are discovered via Spring's own `AotServices.factories().load(…)`
-       SPI (constructor of `TestContextAotGenerator`, not `java.util.ServiceLoader`
-       and not any of the 8 previously-fixed sites — `LambdaCallSite`,
-       `loader_namespace_id`, field/method/parameter annotation types,
-       `appendToBootstrapClassLoaderSearch`, `defineClass1`, `Class.forName`
-       reroute, JVMS 5.3 chain-scoping). Not fixed this session (would need the
-       same kind of targeted loader-aware-resolution audit as the earlier 8
-       fixes, applied to `AotServices`'s reflective instantiation/cast path —
-       out of scope for this triage's remaining budget).
+       cast to org.springframework.test.context.aot.TestRuntimeHintsRegistrar`~~
+       **FIXED (2026-07-16, branch `fix/aotservices-loaderid-20260716`).**
 
-    None of the 4 `TestContextAotGeneratorIntegrationTests` failures are fixed
-    in this session; #1 is attributed to an existing tracked residual, #2–#4 are
-    newly characterized and documented for a future session. No regressions
-    were introduced (no code changes were made to the VM in this triage).
+       Root cause: a **9th site** in the same loader-identity family as this
+       doc's 8-fix wave, but on a path none of those 8 touch. `TestRuntimeHintsRegistrar`
+       instances are discovered via Spring's own `AotServices.factories().load(…)`
+       SPI (constructor of `TestContextAotGenerator`), which resolves down to
+       `SpringFactoriesLoader.instantiateFactory`: `ClassUtils.forName(implementationName,
+       this.classLoader)` (`this.classLoader` is the caller's thread-context
+       classloader — the `@CompileWithForkedClassLoader` fork loader for this
+       test) followed by `Constructor.newInstance()`. That path allocates the
+       service object (`StandardTestRuntimeHints`) using the EXACT `ClassId` the
+       reflective `Class.forName` resolved — already loader-correct, matching the
+       `declaring_cid`-from-mirror pattern `native_constructor_new_instance`
+       (`native-builtins/src/lang_class.rs`) already uses for this exact reason.
+
+       The actual bug is on the CONSUMING side. `TestContextAotGenerator.
+       processAheadOfTime`'s `this.testRuntimeHintsRegistrars.forEach(registrar ->
+       …)` lambda has its `Consumer<TestRuntimeHintsRegistrar>` SAM parameter
+       narrowed from the erased `Object`, so CratonVM's direct lambda-dispatch
+       path (`try_lambda_dispatch`, which bypasses the JDK's synthetic
+       `accept(Object)` bridge and its bytecode `checkcast`) "replays" that cast
+       itself via `checkcast_lambda_instantiated_args` -->
+       `lambda_arg_provably_not_instance` (`vm/src/runtime/interpreter.rs`).
+       Unlike the ordinary bytecode `Instruction::Checkcast` opcode handler —
+       which falls back to `loader_aware_name_assignable` (a NAME-based walk of
+       the object's own superclass/interface chain, loader-identity-agnostic) —
+       `lambda_arg_provably_not_instance` only tried a global `ClassId`-identity
+       check (`get_loaded_class_id`, loader-blind, picks whichever same-named
+       class was registered first) and an exact defining-loader-namespace lookup
+       (`class_defined_by_loader_exact`, which misses here because the fork
+       loader was never separately driven to resolve `TestRuntimeHintsRegistrar`
+       by name on its own — it only received it transitively while defining
+       `StandardTestRuntimeHints`). Neither proved the match, so the "provably
+       not an instance" fallback fired and threw a false `ClassCastException`
+       for a same-named, different-loader interface copy the object's own
+       `interfaces` list already carried.
+
+       Fix (`vm/src/runtime/interpreter.rs`, `lambda_arg_provably_not_instance`):
+       added `loader_aware_name_assignable(shared, obj_class_id, target_cid,
+       target)` as one more disjunct before concluding a mismatch — reusing the
+       exact same helper the ordinary `checkcast` opcode already relies on, so
+       direct lambda dispatch gets the same loader-faithful answer.
+
+       Verified: `endToEndTests` no longer throws the `ClassCastException` —
+       KRun repro (real JDK 25, `TestContextAotGeneratorIntegrationTests`
+       standalone) now progresses past `TestContextAotGenerator`'s registrar
+       loop into AOT generation proper, and fails later for the **already-
+       documented, unrelated** `#3` SnakeYAML `ParserException` above (same
+       `test1.yaml` block-node parse failure, now also observed via
+       `BasicSpringJupiterSharedConfigTests` instead of `$NestedTests` — not
+       fixed, not caused by this change). Regression-checked clean:
+       `cratonvm-native-builtins --lib --release` 3000/0 (0 failed, 6 ignored);
+       `cratonvm-vm --lib --release` 2200 passed/16 failed, and an A/B rerun of
+       the identical 16 against the pre-fix binary reproduces the exact same 16
+       (9 `lock_order` debug-only-panic tests + 7 `jit::skip_list` tests, both
+       confirmed pre-existing and unrelated to loader resolution — not a
+       regression). AOT-cluster spot checks against the fixed binary, real JDK
+       25: `ConfigurationClassPostProcessorAotContributionTests` 20/20 OK (the
+       doc's previously-recorded 5 residuals were the host-JDK `java.lang.
+       classfile.ClassFile` gap noted elsewhere in this doc — JDK 25 has that
+       class, so they now pass too), `TestCompilerTests` 22/21/1 (matches
+       recorded baseline exactly, no change). `BeanDefinitionMethodGeneratorTests`
+       hit a GC/heap-corruption LOADERR (`out-of-bounds field read … class_id=
+       ClassId(0) class_name=java/lang/Object`, `Stale pointer detected in
+       invokevirtual receiver`, ending in a `NoSuchMethodError` on
+       `java/lang/Object.lambda$executeRecursively$5()V`) that reproduces
+       **identically on the unmodified pre-fix baseline binary** (same objects,
+       same time-adjacent pattern) — confirmed via direct A/B, not caused by
+       this change. It matches the signature of this doc's already-tracked, OPEN
+       `ApplicationContextAotGeneratorTests` GC-corruption bug (§2, 2026-07-16
+       re-triage) and appears to now also be reachable from this class under
+       heavy host load; needs its own dedicated session, out of scope here.
+
+    None of the other 3 `TestContextAotGeneratorIntegrationTests` failures are
+    fixed by this change; #1 remains attributed to an existing tracked residual,
+    #2–#3 remain open exactly as characterized above.
 
 ---
 
@@ -749,6 +935,43 @@ rule `uri_scheme_name_fail_index` already enforced for exceptions). The class is
     characteristic — just no longer severe enough to cause an observed hang.
     Also unfixed: the T19.H1 watchdog stack-dump itself SIGSEGVs when JIT frames are on the stack
     (separate small bug; `--nojit` dumps work).
+    **2026-07-16 investigation**: root-caused the *reliability* half of this note but could
+    **not** reproduce a live SIGSEGV after extensive targeted testing on dev tip (single
+    tier-up-compiled JIT calls, OSR-adjacent long single-invocation loops, deep
+    JIT<->interpreter interface-dispatch recursion, and multi-threaded runs with one thread
+    parked deep inside a JIT-compiled method while another thread acks normally) — the
+    watchdog consistently either dumped correctly or fell back to its documented "0 java
+    threads responded" path, never crashed. What the testing DID confirm as a genuine,
+    reproducible gap: `SharedVm::dump_current_thread_frames` (`vm/src/vm/vm_init.rs`) walks
+    only `thread.frames`, the interpreter's own logical frame stack — a method dispatched
+    straight to already-JIT-compiled machine code
+    (`execute_invokestatic_cached`/`execute_jit_call` in `runtime/interpreter.rs`) never gets
+    a `Frame` pushed there at all, so that call level is silently invisible to the dump
+    (either the whole thread shows 0 acks, or the frame count is misleadingly shallow) —
+    never a fabricated/garbage frame in this revision, but a real diagnostic blind spot for
+    a debug-tooling feature whose whole job is showing what a thread is doing. Landed two
+    low-risk hardening changes on `fix/watchdog-jit-sigsegv-20260716` (both in
+    `vm/src/vm/vm_init.rs`, `dump_current_thread_frames` and `set_wait_site_snapshot`): (1)
+    each rendered frame line now goes through `catch_unwind` so a panic while formatting one
+    (e.g. future regression hitting a malformed frame) can't prevent the watchdog from
+    reaching its own `process::abort()` — that failure mode would otherwise turn an
+    intended, informative crash-with-dump into a silent hang instead; (2) when
+    `conservative_roots::current_thread_jit_depth()` is nonzero at dump time the output now
+    appends an explicit note that one or more call levels are JIT-compiled and not shown,
+    pointing at `--nojit` as a workaround, instead of leaving a shallow dump to be misread as
+    a shallow call stack. Verified: `cargo test -p cratonvm-vm --lib` (82/0 in the touched
+    `vm_init` module, no regressions) plus live re-runs of every repro scenario above on the
+    rebuilt binary — identical dump/abort behaviour to pre-fix, no crashes, notes render
+    correctly when the JIT-depth condition is met. Left as **UNFIXED** (not renamed
+    `-FIXED`): the originally-reported SIGSEGV itself was never reproduced or root-caused,
+    only hardened against; if it recurs, capture a core dump (`ulimit -c unlimited` +
+    `/proc/sys/kernel/core_pattern`) or run directly under `gdb -q --args cratonvm
+    --stack-dump-on-timeout=N ...` so the exact faulting frame is available next time,
+    ideally under the `release`/`profsym` profile (this session's repro attempts used the
+    `dev-full` profile — no LTO/opt-level=3 — because the shared build host repeatedly
+    OOM-killed the full `profsym` release+LTO link under concurrent multi-session load;
+    timing-sensitive interpreter/JIT-boundary races are plausible under release codegen that
+    a `dev-full` binary's much slower interpreter dispatch may simply not expose).
 *   ~~`web.reactive.result.method.annotation.RequestMappingMessageConversionIntegrationTests` —
     pathological slowness (>1800s vs HotSpot's 13s, 160 tests).~~ **2026-07-15 update**: confirmed
     genuine forward progress, not a hang (frame counts change across successive
@@ -2184,3 +2407,88 @@ time pressure without the ability to fully verify it.
 Landed: branch `fix/testtemplate-cce-20260716`, commits `8a5c2274`
 (the GC fix) and a follow-up MockCtx compile-break fix, rebased onto `dev`
 tip `6c517cd9` before push.
+
+### 5.5 `RequestMappingMessageConversionIntegrationTests` 2/160 HTTP 500 residual (section 5) — investigated, does NOT reproduce on current `dev`; treating as already-resolved (2026-07-16)
+
+Follow-up on section 5's own "not yet root-caused" note: **2 HTTP 500s
+(`HttpServerErrorException$InternalServerError`) on the `[3] Reactor Netty`
+and `[4] Tomcat` server backends**. Investigated from scratch, dedicated
+session, fresh worktree (`/data/data/wt-reqmapping-http500-20260716`, branch
+`fix/reqmapping-http500-20260716`), fresh release binary
+(`vmfix-reqmapping-http500-20260716`) off `dev` tip `6178c36f`
+(`--enable-native-access=ALL-UNNAMED`, real JDK 25).
+
+**Could not reproduce, at all, after exhaustive per-test-invocation
+verification.** A full-class `KRun` pass completed in 560s with `fail=0`
+(`status=OK`), but with a lower `found` count than expected (found=83 of a
+theoretical 160 test-template invocations) — not trusted at face value, so
+built a custom `VerboseRun.java` JUnit-Platform-Launcher harness
+(`DiscoverySelectors.selectMethod(class, name, HttpServer.class.getName())`
++ a `TestExecutionListener` printing `TSTART`/`TEND` for every leaf
+`test-template-invocation`) and ran **every one of the 40
+`@ParameterizedHttpServerTest` methods individually across all 4 backends**
+(small batches of 2-5 methods per fresh JVM, to sidestep an unrelated,
+already-documented, low-frequency GC race — see below). Result: **160/160
+individual method×backend combinations `SUCCESSFUL`, zero `FAILED`, zero
+`HttpServerErrorException`**, across 9 separate JVM invocations including
+both suspect-looking methods (`personResponseBodyWithCompletableFuture`,
+`personTransformWithCompletableFuture` — CompletableFuture-based bodies,
+the most plausible executor-identity-dispatch suspects) and the
+threading/timing-sensitive ones (`personTransformWithFluxDelayed`, the
+XML-marshalling `*Xml` variants, `resource`).
+
+**Conclusion: this residual is already fixed on current `dev`, most likely
+as a side effect of one or both of two unrelated fix sessions that landed
+*after* section 5's original report** (dev tip `22dfc55e`, 2026-07-15) **and
+before this investigation's tip** (`6178c36f`/`704aedd3`, 2026-07-16):
+commit `19a5025f` (section 5.1, `Thread.getId()` hardcoded-to-`1` fix) and
+commit `9850617b` (section 5.2, `AbstractExecutorService.submit()`
+real-vs-synthetic-executor redispatch fix for Netty's
+`AbstractEventExecutor`). Both land squarely on the real-thread /
+executor-identity mechanics that a backend-specific (Reactor Netty and
+Tomcat are this class's only two backends with real, JDK-executor-backed
+thread pools; Jetty/Jetty Core are not) failure in a
+CompletableFuture-touching message-conversion test would plausibly hit;
+neither fix was targeted at this class, so the resolution was not
+independently re-verified end-to-end before now. Not re-attempted as a
+target-the-old-tip bisection (would need a second ~30 min release build
+under this session's severe host contention) given the 160/160
+current-tip pass rate is already strong, direct evidence.
+
+**One unrelated, already-known, already-partially-fixed instability
+surfaced during this sweep and cost real time before being correctly
+attributed — noted here so the next session doesn't re-chase it.** Two of
+the batched multi-method runs crashed mid-run with
+`java.lang.ArrayIndexOutOfBoundsException` in
+`org/junit/platform/commons/util/ExceptionUtils.<clinit>`, cascading into
+`NoSuchMethodError`/`AbstractMethodError` on JUnit Platform's own
+hierarchical-executor lambda dispatch. This is **not** a new bug: it is the
+same "register-invisible root" family documented in section 5.4
+(`TestTemplateInvocationContext` CCE, `obj_cid=0` bare-`Object` signature)
+and in `docs/internal/springboot/testengine-getid-abstractmethoderror-
+young-gc-forwarding-gap-FIXED.md` (confirmed present on `origin/dev` as of
+this session's final `git fetch`, tip `704aedd3`) — a rare (~1/45-1/64),
+partially-fixed GC-root-visibility race unrelated to message conversion.
+Worked around by keeping JVM batches small (2-5 methods, 8-20 test
+invocations) rather than chasing it; every crash recovered cleanly on retry
+with zero real test failures.
+
+**Regression suites** (dev tip `6178c36f`, same binary):
+`cargo test -p cratonvm-native-builtins --lib --release`: **3000 passed, 0
+failed, 6 ignored** (clean baseline match). `cargo test -p cratonvm-vm --lib
+--release`: **2199 passed, 17 failed** — first attempt was OOM-killed by
+this severely overloaded shared host (`load average` 140-230,
+<code>/</code> at 100%, only ~2 GB RAM free with 2000+ concurrent users) and
+retried clean; the 17 failures exactly match this doc's own
+already-documented pre-existing baseline (7 `jit::skip_list::tests::*` +
+9 `runtime::lock_order::tests::*`, both already attributed to unrelated
+sessions in section 5/5.4, plus one host-contention flake,
+`jit_getfield_never_tears_against_concurrent_jit_putfield_int`) — no new
+regressions.
+
+**No code change landed** — nothing to fix; this entry exists to close the
+loop on section 5's "not yet root-caused" note with evidence, and to
+prevent a future session from re-opening a hunt for a bug that no longer
+reproduces. If it resurfaces, re-check first whether `19a5025f`/`9850617b`
+are still present on whatever tip is being tested before assuming a
+regression.
